--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.1",
     "faker": "^5.5.3",
     "jest": "^27.3.1",
+    "joi": "^17.4.2",
     "ntl": "^5.1.0",
     "pg": "^8.7.1",
     "supertest": "^6.1.6",
