--- a/package.json
+++ b/package.json
@@ -16,20 +16,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/plugin-transform-runtime": "^7.16.0",
-    "@babel/preset-env": "^7.16.0",
-    "@sendgrid/mail": "^7.6.0",
-    "babel-jest": "^27.3.1",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "faker": "^5.5.3",
-    "jest": "^27.3.1",
     "joi": "^17.4.2",
-    "ntl": "^5.1.0",
     "pg": "^8.7.1",
-    "supertest": "^6.1.6",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -38,6 +30,14 @@
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-import": "^2.25.2",
     "husky": "^7.0.4",
-    "prettier": "2.4.1"
+    "prettier": "2.4.1",
+    "@babel/plugin-transform-runtime": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
+    "@sendgrid/mail": "^7.6.0",
+    "babel-jest": "^27.3.1",
+    "faker": "^5.5.3",
+    "jest": "^27.3.1",
+    "ntl": "^5.1.0",
+    "supertest": "^6.1.6"
   }
 }
