update eslint config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,14 @@
             "error",
             2
         ],
-        "linebreak-style": 0
+        "linebreak-style": 0,
+        "import/no-extraneous-dependencies": [
+            "error",
+            {
+                "devDependencies": true,
+                "optionalDependencies": true,
+                "peerDependencies": true
+            }
+        ]
     }
 }
